@@ -1,15 +1,13 @@
 package edu.aua.onboardingservice.converter.impl;
 
+import edu.aua.common.converter.SpecializationConverter;
 import edu.aua.onboardingservice.annotation.Converter;
-import edu.aua.onboardingservice.client.jiraclient.user.dto.JiraUserDto;
 import edu.aua.onboardingservice.converter.MenteeConverter;
-import edu.aua.onboardingservice.persistance.entity.Mentee;
-import edu.aua.onboardingservice.service.dto.MenteeDto;
-import edu.aua.talents.converter.SpecializationConverter;
+import edu.aua.onboardingservice.persistance.Mentee;
+import edu.aua.onboardingservice.persistance.MenteeDto;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Converter
 @RequiredArgsConstructor
@@ -19,7 +17,7 @@ public class MenteeConverterImpl implements MenteeConverter {
 
     @Override
     public List<MenteeDto> bulkConvertToDto(final List<Mentee> mentees) {
-        return mentees.stream().map(this::convertToDto).collect(Collectors.toList());
+        return mentees.stream().map(this::convertToDto).toList();
     }
 
     @Override
@@ -30,19 +28,25 @@ public class MenteeConverterImpl implements MenteeConverter {
         menteeDTO.setLastName(mentee.getLastName());
         menteeDTO.setEmail(mentee.getEmail());
         menteeDTO.setPhoneNumber(mentee.getPhoneNumber());
-        menteeDTO.setDisplayName(mentee.getDisplayName());
-        menteeDTO.setMentorId(mentee.getMentor().getId());
-        menteeDTO.setAccountId(mentee.getAccountId());
         menteeDTO.setOnboardingDocumentSent(mentee.getOnboardingDocumentSent());
         menteeDTO.setSpecialization(specializationConverter.convertToDTO(mentee.getSpecialization()));
         return menteeDTO;
     }
 
     @Override
-    public JiraUserDto convertToJiraDTO(final MenteeDto menteeDTO) {
-        final JiraUserDto jiraUserDto = new JiraUserDto();
-        jiraUserDto.setDisplayName(menteeDTO.getDisplayName());
-        jiraUserDto.setEmailAddress(menteeDTO.getEmail());
-        return jiraUserDto;
+    public List<Mentee> bulkConvertToEntity(List<MenteeDto> menteeDtoList) {
+        return menteeDtoList.stream().map(this::convertToEntity).toList();
+    }
+
+    @Override
+    public Mentee convertToEntity(MenteeDto menteeDto) {
+        final Mentee mentee = new Mentee();
+        mentee.setFirstName(menteeDto.getFirstName());
+        mentee.setLastName(menteeDto.getLastName());
+        mentee.setEmail(menteeDto.getEmail());
+        mentee.setPhoneNumber(menteeDto.getPhoneNumber());
+        mentee.setOnboardingDocumentSent(menteeDto.getOnboardingDocumentSent());
+        mentee.setSpecialization(specializationConverter.convertToEntity(menteeDto.getSpecialization()));
+        return mentee;
     }
 }
